--- a/twitter/Base.lproj/Main.storyboard
+++ b/twitter/Base.lproj/Main.storyboard
@@ -93,11 +93,11 @@
                                 <rect key="frame" x="0.0" y="56" width="428" height="816"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="170" id="8gA-Mv-RaH" customClass="TweetCell">
-                                        <rect key="frame" x="0.0" y="44.666666030883789" width="428" height="170"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="260" id="8gA-Mv-RaH" customClass="TweetCell">
+                                        <rect key="frame" x="0.0" y="44.666666030883789" width="428" height="260"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8gA-Mv-RaH" id="dWK-m4-jTG">
-                                            <rect key="frame" x="0.0" y="0.0" width="428" height="170"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="428" height="260"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" verticalCompressionResistancePriority="752" misplaced="YES" restorationIdentifier="profileImage" translatesAutoresizingMaskIntoConstraints="NO" id="72n-3x-C8O">
@@ -114,7 +114,7 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" restorationIdentifier="textLabel" text="Text" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IaW-lj-XOv">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" misplaced="YES" restorationIdentifier="textLabel" text="Text" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IaW-lj-XOv">
                                                     <rect key="frame" x="132" y="45" width="264" height="75"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <nil key="textColor"/>
@@ -127,7 +127,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" misplaced="YES" restorationIdentifier="retweetButton" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9uU-hh-0rQ">
-                                                    <rect key="frame" x="185" y="98" width="77" height="44"/>
+                                                    <rect key="frame" x="193" y="148" width="77" height="22"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="50" id="v2d-TL-5x0"/>
                                                     </constraints>
@@ -144,7 +144,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" misplaced="YES" restorationIdentifier="likeButton" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ib3-Ks-xOY">
-                                                    <rect key="frame" x="258" y="98" width="86" height="44"/>
+                                                    <rect key="frame" x="266" y="146" width="86" height="25"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="50" id="e6p-iz-jPS"/>
                                                     </constraints>
@@ -154,16 +154,8 @@
                                                         <action selector="didTapFavorite:" destination="8gA-Mv-RaH" eventType="touchUpInside" id="iKh-Fb-p53"/>
                                                     </connections>
                                                 </button>
-                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" restorationIdentifier="dmButton" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rVg-HY-tRb">
-                                                    <rect key="frame" x="352" y="99" width="54" height="44"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="50" id="giZ-NA-kqU"/>
-                                                    </constraints>
-                                                    <state key="normal" title="Button"/>
-                                                    <buttonConfiguration key="configuration" style="plain" image="message-icon" title=" "/>
-                                                </button>
                                                 <button opaque="NO" contentMode="scaleToFill" misplaced="YES" restorationIdentifier="replyButton" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JDD-PU-Wx5">
-                                                    <rect key="frame" x="119" y="81" width="50" height="80.666666666666686"/>
+                                                    <rect key="frame" x="132" y="148" width="50" height="22"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="50" id="B0L-L4-QI6"/>
                                                         <constraint firstAttribute="width" constant="50" id="PiX-Xp-mTg"/>
@@ -173,6 +165,20 @@
                                                     <connections>
                                                         <action selector="didTapReply:" destination="8gA-Mv-RaH" eventType="touchUpInside" id="2se-xL-ln6"/>
                                                     </connections>
+                                                </button>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="748" verticalCompressionResistancePriority="748" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="abO-VQ-jsR">
+                                                    <rect key="frame" x="132" y="108" width="276" height="12"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="abO-VQ-jsR" secondAttribute="height" multiplier="140:41" id="qh3-ca-pmJ"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" restorationIdentifier="dmButton" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rVg-HY-tRb">
+                                                    <rect key="frame" x="354" y="136" width="54" height="44"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="50" id="giZ-NA-kqU"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="plain" image="message-icon" title=" "/>
                                                 </button>
                                             </subviews>
                                             <constraints>
@@ -187,15 +193,18 @@
                                                 <constraint firstAttribute="bottom" secondItem="JDD-PU-Wx5" secondAttribute="bottom" constant="8" id="QbG-NF-ulr"/>
                                                 <constraint firstItem="72n-3x-C8O" firstAttribute="top" secondItem="dWK-m4-jTG" secondAttribute="top" constant="16" id="RWj-k0-lLE"/>
                                                 <constraint firstItem="iyU-u7-CoY" firstAttribute="bottom" secondItem="LPq-EN-1Ke" secondAttribute="bottom" id="VeN-R7-kO8"/>
+                                                <constraint firstItem="JDD-PU-Wx5" firstAttribute="top" secondItem="abO-VQ-jsR" secondAttribute="bottom" constant="8" id="Wua-5w-RO2"/>
                                                 <constraint firstItem="9uU-hh-0rQ" firstAttribute="bottom" secondItem="JDD-PU-Wx5" secondAttribute="bottom" id="c1c-vT-Egu"/>
+                                                <constraint firstItem="abO-VQ-jsR" firstAttribute="top" secondItem="IaW-lj-XOv" secondAttribute="bottom" constant="8" id="etQ-bn-3eQ"/>
                                                 <constraint firstItem="IaW-lj-XOv" firstAttribute="leading" secondItem="q2U-m5-MBN" secondAttribute="leading" id="f9V-PF-XTK"/>
                                                 <constraint firstItem="LPq-EN-1Ke" firstAttribute="leading" secondItem="q2U-m5-MBN" secondAttribute="trailing" constant="4" id="gkc-Ck-HXG"/>
-                                                <constraint firstItem="iyU-u7-CoY" firstAttribute="leading" secondItem="LPq-EN-1Ke" secondAttribute="trailing" constant="16" id="hRR-zk-ehb"/>
+                                                <constraint firstItem="iyU-u7-CoY" firstAttribute="leading" secondItem="LPq-EN-1Ke" secondAttribute="trailing" constant="2" id="hRR-zk-ehb"/>
                                                 <constraint firstItem="Ib3-Ks-xOY" firstAttribute="leading" secondItem="9uU-hh-0rQ" secondAttribute="trailing" constant="24" id="iQU-2g-7NV"/>
+                                                <constraint firstAttribute="trailing" secondItem="abO-VQ-jsR" secondAttribute="trailing" constant="16" id="jYT-B8-zgs"/>
                                                 <constraint firstItem="rVg-HY-tRb" firstAttribute="leading" secondItem="Ib3-Ks-xOY" secondAttribute="trailing" constant="16" id="oMV-kJ-zso"/>
+                                                <constraint firstItem="abO-VQ-jsR" firstAttribute="leading" secondItem="q2U-m5-MBN" secondAttribute="leading" id="oyJ-o9-Ga0"/>
                                                 <constraint firstItem="q2U-m5-MBN" firstAttribute="leading" secondItem="72n-3x-C8O" secondAttribute="trailing" constant="8" id="p6D-pU-IT4"/>
                                                 <constraint firstItem="9uU-hh-0rQ" firstAttribute="leading" secondItem="JDD-PU-Wx5" secondAttribute="trailing" constant="48" id="pPS-D7-Dij"/>
-                                                <constraint firstItem="JDD-PU-Wx5" firstAttribute="top" secondItem="IaW-lj-XOv" secondAttribute="bottom" constant="16" id="plH-50-ySn"/>
                                                 <constraint firstItem="IaW-lj-XOv" firstAttribute="top" secondItem="q2U-m5-MBN" secondAttribute="bottom" constant="8" id="xWh-K6-vZg"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -209,6 +218,7 @@
                                             <outlet property="replyButton" destination="JDD-PU-Wx5" id="0lD-wX-5xd"/>
                                             <outlet property="retweetButton" destination="9uU-hh-0rQ" id="3OT-ti-KAf"/>
                                             <outlet property="textLabel" destination="IaW-lj-XOv" id="ZPv-fL-K8e"/>
+                                            <outlet property="tweetImage" destination="abO-VQ-jsR" id="huo-Sz-I6x"/>
                                             <segue destination="q7y-BI-Ngf" kind="show" identifier="showDetails" id="zvj-mL-6Qu"/>
                                         </connections>
                                     </tableViewCell>
@@ -268,6 +278,7 @@
                                     <constraint firstAttribute="height" constant="218" id="D2f-Pa-0JL"/>
                                 </constraints>
                                 <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences" keyboardType="alphabet" keyboardAppearance="light" returnKeyType="go"/>
                             </textView>
                         </subviews>
